[package]
name = "pacience"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = "0.3.28"
tokio-tungstenite = "*"
serde = { version = "1.0.188" }
tokio = { version = "1.32.0", features = ["full"] }
serde-binary = { version = "0.5.0" }
chrono = "0.4.31"
bytes = "*"

